feat: adding features